syntax = "proto3";

package protocol;

option java_package = "cn.ledgeryi.protos.contract";
option go_package = "github.com/tronprotocol/grpc-gateway/core";

import "core/ledger_yi.proto";

message SmartContract {
    message ABI {
        message Entry {
            enum EntryType {
                UnknownEntryType = 0;
                Constructor = 1;
                Function = 2;
                Event = 3;
                Fallback = 4;
            }
            message Param {
                bool indexed = 1;
                string name = 2;
                string type = 3;
            }
            enum StateMutabilityType {
                UnknownMutabilityType = 0;
                Pure = 1;
                View = 2;
                Nonpayable = 3;
                Payable = 4;
            }

            bool anonymous = 1;
            bool constant = 2;
            string name = 3;
            repeated Param inputs = 4;
            repeated Param outputs = 5;
            EntryType type = 6;
            bool payable = 7;
            StateMutabilityType stateMutability = 8;
        }
        repeated Entry entrys = 1;
    }
    bytes owner_address = 1;
    bytes contract_address = 2;
    ABI abi = 3;
    bytes bytecode = 4;
    int64 call_value = 5;
    string name = 6;
    bytes code_hash = 7;
    bytes tx_hash = 8;
}

message CreateSmartContract {
    bytes owner_address = 1;
    SmartContract new_contract = 2;
}

message TriggerSmartContract {
    bytes owner_address = 1;
    bytes contract_address = 2;
    int64 call_value = 3;
    bytes data = 4;
}

message ClearABIContract {
    bytes owner_address = 1;
    bytes contract_address = 2;
}